# SudokuOCR

./: BasicOCR.cpp  BasicOCR.h  CMakeLists.txt  README.md  Stage2  gridFinder.cpp  gridFinder.h  main.cpp  sudoku.cpp  sudoku.h
